corrected focus visible

--- a/libraries/ui-library/src/components/six-language-switcher/six-language-switcher.scss
+++ b/libraries/ui-library/src/components/six-language-switcher/six-language-switcher.scss
@@ -14,7 +14,7 @@
       color: var(--six-color-red);
     }
 
-    :focus-visible {
+    &:focus-visible {
       outline: var(--six-focus-ring);
       outline-offset: var(--six-focus-ring-offset);
     }
